docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/PreadCommand.md
# `PreadCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.PreadCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.PreadCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a 

```
*
```

PREAD command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|----------------------------------|-------------------------|
| [`Aname`](#PreadCommand.Aname)   | Gets the table name.    |
| [`Index`](#PreadCommand.Index)   | Gets the command index. |
| [`Name`](#PreadCommand.Name)     | Gets the command name.  |
| [`Values`](#PreadCommand.Values) | Gets the values.        |

<a id="property-detail"></a>

## Property detail

<a id="PreadCommand.Aname"></a>

### *property* PreadCommand.Aname *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the table name.

<!-- !! processed by numpydoc !! -->

<a id="PreadCommand.Index"></a>

### *property* PreadCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="PreadCommand.Name"></a>

### *property* PreadCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="PreadCommand.Values"></a>

### *property* PreadCommand.Values *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[float](https://docs.python.org/3/library/functions.html#float)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

